force-app/main/default/objects/Logistic__c/Logistic__c.object-meta.xml
<CustomObject>
    <label>Logistic</label>
    <nameField>
        <label>Logistical Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>