force-app/main/default/objects/Logistic__c/fields/Equipment_Needed__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Needed__c</fullName>
    <label>Equipment Needed</label>
    <type>TextArea</type>
</CustomField>