force-app/main/default/objects/Logistic__c/fields/Nature_of_the_Issue__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_the_Issue__c</fullName>
    <label>Nature of the Issue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>