force-app/main/default/objects/Logistic__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Logsitics</relationshipLabel>
    <relationshipName>Logsitics</relationshipName>
    <type>Lookup</type>
</CustomField>